appsec/helper-rust/src/ffi/sidecar_ffi.rs

/* automatically generated by rust-bindgen 0.72.1 */

//! Auto-generated FFI bindings from components-rs/sidecar.h
//!
//! Regenerate with: ./scripts/generate-sidecar-ffi.sh
//!
//! Only includes types/functions needed for helper-rust as telemetry sender.
#![allow(non_camel_case_types, non_upper_case_globals, dead_code)]

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ddog_Vec_U8 {
    pub ptr: *const u8,
    pub len: usize,
    pub capacity: usize,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ddog_Error {
    pub message: ddog_Vec_U8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ddog_Slice_CChar {
    pub ptr: *const ::core::ffi::c_char,
    pub len: usize,
}
pub type ddog_CharSlice = ddog_Slice_CChar;
pub const ddog_Option_Error_Tag_DDOG_OPTION_ERROR_SOME_ERROR: ddog_Option_Error_Tag = 0;
pub const ddog_Option_Error_Tag_DDOG_OPTION_ERROR_NONE_ERROR: ddog_Option_Error_Tag = 1;
pub type ddog_Option_Error_Tag = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct ddog_Option_Error {
    pub tag: ddog_Option_Error_Tag,
    pub __bindgen_anon_1: ddog_Option_Error__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union ddog_Option_Error__bindgen_ty_1 {
    pub __bindgen_anon_1: ddog_Option_Error__bindgen_ty_1__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ddog_Option_Error__bindgen_ty_1__bindgen_ty_1 {
    pub some: ddog_Error,
}
pub type ddog_MaybeError = ddog_Option_Error;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_TRACERS: ddog_MetricNamespace = 0;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_PROFILERS: ddog_MetricNamespace = 1;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_RUM: ddog_MetricNamespace = 2;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_APPSEC: ddog_MetricNamespace = 3;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_IDE_PLUGINS: ddog_MetricNamespace = 4;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_LIVE_DEBUGGER: ddog_MetricNamespace = 5;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_IAST: ddog_MetricNamespace = 6;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_GENERAL: ddog_MetricNamespace = 7;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_TELEMETRY: ddog_MetricNamespace = 8;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_APM: ddog_MetricNamespace = 9;
pub const ddog_MetricNamespace_DDOG_METRIC_NAMESPACE_SIDECAR: ddog_MetricNamespace = 10;
pub type ddog_MetricNamespace = ::core::ffi::c_uint;
pub const ddog_MetricType_DDOG_METRIC_TYPE_GAUGE: ddog_MetricType = 0;
pub const ddog_MetricType_DDOG_METRIC_TYPE_COUNT: ddog_MetricType = 1;
pub const ddog_MetricType_DDOG_METRIC_TYPE_DISTRIBUTION: ddog_MetricType = 2;
pub type ddog_MetricType = ::core::ffi::c_uint;
pub const ddog_LogLevel_DDOG_LOG_LEVEL_ERROR: ddog_LogLevel = 0;
pub const ddog_LogLevel_DDOG_LOG_LEVEL_WARN: ddog_LogLevel = 1;
pub const ddog_LogLevel_DDOG_LOG_LEVEL_DEBUG: ddog_LogLevel = 2;
pub type ddog_LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn ddog_Error_drop(error: *mut ddog_Error);
}
unsafe extern "C" {
    pub fn ddog_Error_message(error: *const ddog_Error) -> ddog_CharSlice;
}
unsafe extern "C" {
    pub fn ddog_MaybeError_drop(arg1: ddog_MaybeError);
}
unsafe extern "C" {
    pub fn ddog_sidecar_enqueue_telemetry_log(
        session_id_ffi: ddog_CharSlice,
        runtime_id_ffi: ddog_CharSlice,
        service_name_ffi: ddog_CharSlice,
        env_name_ffi: ddog_CharSlice,
        identifier_ffi: ddog_CharSlice,
        level: ddog_LogLevel,
        message_ffi: ddog_CharSlice,
        stack_trace_ffi: *mut ddog_CharSlice,
        tags_ffi: *mut ddog_CharSlice,
        is_sensitive: bool,
    ) -> ddog_MaybeError;
}
unsafe extern "C" {
    pub fn ddog_sidecar_enqueue_telemetry_point(
        session_id_ffi: ddog_CharSlice,
        runtime_id_ffi: ddog_CharSlice,
        service_name_ffi: ddog_CharSlice,
        env_name_ffi: ddog_CharSlice,
        metric_name_ffi: ddog_CharSlice,
        value: f64,
        tags_ffi: *mut ddog_CharSlice,
    ) -> ddog_MaybeError;
}
unsafe extern "C" {
    pub fn ddog_sidecar_enqueue_telemetry_metric(
        session_id_ffi: ddog_CharSlice,
        runtime_id_ffi: ddog_CharSlice,
        service_name_ffi: ddog_CharSlice,
        env_name_ffi: ddog_CharSlice,
        metric_name_ffi: ddog_CharSlice,
        metric_type: ddog_MetricType,
        metric_namespace: ddog_MetricNamespace,
    ) -> ddog_MaybeError;
}
